Fix extra padding on homepage hub boxes on small desktop

--- a/src/platform/site-wide/sass/merger.scss
+++ b/src/platform/site-wide/sass/merger.scss
@@ -633,13 +633,7 @@
     #homepage-hub {
 
       #hub-internal {
-
         width: 85%;
-        .usa-grid {
-          .usa-width-one-half {
-            min-height: 300px;
-          }
-        }
       }
     }
   }
